[www] Fix truncated rows on uploaded packages

--- a/node/www/css/style.less
+++ b/node/www/css/style.less
@@ -282,9 +282,13 @@ body
     text-transform: uppercase;
 }
 
+.package_row .name, .package_row .date, .package_row .checksum
+{
+    font-size: small;
+}
+
 .package_row .date
 {
-    font-size:   small;
     white-space: nowrap;
 }
 
